--- a/part2/src/App.css
+++ b/part2/src/App.css
@@ -17,6 +17,11 @@
   filter: drop-shadow(0 0 2em #61dafbaa);
 }
 
+.important {
+  font-weight: bold;
+  color: red;
+}
+
 @keyframes logo-spin {
   from {
     transform: rotate(0deg);
