--- a/part2/src/App.css
+++ b/part2/src/App.css
@@ -6,41 +6,40 @@
 }
 
 .logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+  color: green;
+  font-size: 3rem;
+  font-style: italic;
 }
 
-.important {
-  font-weight: bold;
+.notification {
+  color: red;
+  background-color: beige;
+  border-style: solid;
+  border-radius: 0.5rem;
+  border-color: red;
+  border-width: 0.1rem;
+  margin-top: 0.5rem;
+  padding: 0.5rem;
+}
+
+.note {
+  padding-top: 0.3rem;
+}
+.note-important {
+  padding-top: 0.3rem;
+  font-size: large;
   color: red;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.toggle-show-button {
+  background-color: blue;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.toggle-importance-button {
+  background-color: rgb(65, 65, 65);
+  padding: 0.3rem;
+  margin-left: 1rem;
 }
 
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+.error {
 }
